# chromospace

./: .gitignore  LIBRARY_DESIGN.md  LICENSE  README.md  biome.json  grammar.md  index.html  jsr.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.js  why.md
.github/: dependabot.yml
.github/workflows/: app-static-pages.yml  ci.yml
app/: README.md  index.html  package.json  svelte.config.js
data/: README.md  chr10.parquet  chr11.parquet  chr13.parquet  chr15.parquet  chr21.parquet  chr22.parquet  dros.3.arrow
data/chunk/: chr1.arrow  chr1.parquet  chr10.arrow  chr11.arrow  chr12.arrow  chr12.parquet  chr13.arrow  chr14.arrow  chr14.parquet  chr15.arrow  chr16.arrow  chr16.parquet  chr17.arrow  chr17.parquet  chr18.arrow  chr18.parquet  chr19.arrow  chr19.parquet  chr2.arrow  chr2.parquet  chr20.arrow  chr20.parquet  chr21.arrow  chr22.arrow  chr3.arrow  chr3.parquet  chr4.arrow  chr4.parquet  chr5.arrow  chr5.parquet  (+8 more)
data/data-processing/: pyproject.toml
data/data-processing/notebooks/: Untitled.ipynb  make-sample-chunk-data.ipynb  make-sample-model-data.ipynb
data/data-processing/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  arrow-playground-checkpoint.ipynb
data/data-processing/src/data_processing/: __init__.py
docs/: README.md  grammar.md  why.md
scripts/: .gitignore  README.md  convert2arrow.ts  deno.json  xyz2arrow.ts
src/: _delete_this_data.ts  assert.ts  chromatin-types.ts  chromatin.ts  demo.ts  main-old.ts  main.ts  selections.ts  utils.ts
(+36 files in other folders)
