[project]
name = "data-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.2.4",
    "numpy>=2.1.0",
    "pyarrow>=17.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
